# FTL-SIM

./: .gitignore  CMakeLists.txt  cache.py  channel.py  config.yml  event.py  frontend_scheduler.py  ftl.py  main.py  nand.py  nand_scheduler.py  request.py  run.sh  scheduler.py  simulator.py  simulator_old.py
src/: CMakeLists.txt  ftl-config.hpp  ftl-geometry.hpp  ftl-layout.hpp  main.cpp  yaml-loaded.hpp  yaml-loader.hpp
src/sim/ftl/: ftl-config.cpp  ftl-config.hpp  ftl-geometry.cpp  ftl-geometry.hpp  ftl-layout.cpp  ftl-layout.hpp  ftl.hpp
src/sim/setup/: enums.hpp  setup-config.hpp  setup.hpp  yaml-loader.cpp  yaml-loader.hpp
